// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`deve renderizar corretamente 1`] = `
.emotion-7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0;
}

.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1.5rem;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  color: #53595E;
  font-size: 0.875rem;
  padding: calc(0.25rem - 1px) calc(0.5rem - 1px);
}

.emotion-2 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition: color .2s;
  transition: color .2s;
}

.emotion-2 > span > :not(:last-child) {
  margin-right: 0.5rem;
}

.emotion-2:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-2:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0A67D1;
}

.emotion-2:not(:disabled):hover {
  background-color: rgba(103,108,112,0.16);
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-0 {
  fill: currentColor;
  font-size: 1.5rem;
}

.emotion-3 {
  background-color: #FFFFFF;
  border: solid 1px #B9B9BD;
  border-radius: 2px;
  color: #2D343B;
  line-height: 1rem;
  padding: calc(0.5rem - 1px) 0.5rem;
  width: 100%;
  -webkit-transition: all .2s;
  transition: all .2s;
  width: 47px;
  text-align: center;
  margin: 0 0.5rem 0 0.25rem;
}

.emotion-3::-webkit-input-placeholder {
  color: #B9B9BD;
}

.emotion-3::-moz-placeholder {
  color: #B9B9BD;
}

.emotion-3:-ms-input-placeholder {
  color: #B9B9BD;
}

.emotion-3::placeholder {
  color: #B9B9BD;
}

.emotion-3:disabled {
  border-color: #DCDCE0;
  background-color: #F2F2F7;
}

.emotion-3:not(:disabled):hover {
  border-color: #818489;
}

.emotion-3:not(:disabled):focus {
  outline: none;
  box-shadow: 0 0 0 2px #F2F2F7,0 0 0 4px #0A67D1;
}

.emotion-3:not(:disabled):active {
  border-color: #0A67D1;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.09);
}

.emotion-6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1.5rem;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  color: #53595E;
  font-size: 0.875rem;
  padding: calc(0.25rem - 1px) calc(0.5rem - 1px);
  margin-left: 0.25rem;
}

.emotion-6 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition: color .2s;
  transition: color .2s;
}

.emotion-6 > span > :not(:last-child) {
  margin-right: 0.5rem;
}

.emotion-6:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-6:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0A67D1;
}

.emotion-6:not(:disabled):hover {
  background-color: rgba(103,108,112,0.16);
}

<div
  class="emotion-7"
>
  <button
    class="emotion-2"
    title="Página anterior"
    type="button"
  >
    <span>
      <span
        class="emotion-1"
      >
        <svg
          aria-hidden="true"
          class="emotion-0"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M14.47 5.64l1.42 1.41L10.94 12l4.95 4.95-1.42 1.41L8.11 12l6.36-6.36z"
            data-name="angle-left"
          />
        </svg>
      </span>
    </span>
  </button>
  <input
    class="emotion-3"
    type="text"
    value="6"
  />
  <span>
    de 10
  </span>
  <button
    class="emotion-6"
    title="Próxima página"
    type="button"
  >
    <span>
      <span
        class="emotion-1"
      >
        <svg
          aria-hidden="true"
          class="emotion-0"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M9.53 18.36l-1.42-1.41L13.06 12 8.11 7.05l1.42-1.41L15.89 12l-6.36 6.36z"
            data-name="angle-right"
          />
        </svg>
      </span>
    </span>
  </button>
</div>
`;

exports[`deve renderizar corretamente 2`] = `
.emotion-7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0;
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-0 {
  fill: currentColor;
  font-size: 1.5rem;
}

.emotion-3 {
  background-color: #FFFFFF;
  border: solid 1px #B9B9BD;
  border-radius: 2px;
  color: #2D343B;
  line-height: 1rem;
  padding: calc(0.5rem - 1px) 0.5rem;
  width: 100%;
  -webkit-transition: all .2s;
  transition: all .2s;
  width: 47px;
  text-align: center;
  margin: 0 0.5rem 0 0.25rem;
}

.emotion-3::-webkit-input-placeholder {
  color: #B9B9BD;
}

.emotion-3::-moz-placeholder {
  color: #B9B9BD;
}

.emotion-3:-ms-input-placeholder {
  color: #B9B9BD;
}

.emotion-3::placeholder {
  color: #B9B9BD;
}

.emotion-3:disabled {
  border-color: #DCDCE0;
  background-color: #F2F2F7;
}

.emotion-3:not(:disabled):hover {
  border-color: #818489;
}

.emotion-3:not(:disabled):focus {
  outline: none;
  box-shadow: 0 0 0 2px #F2F2F7,0 0 0 4px #0A67D1;
}

.emotion-3:not(:disabled):active {
  border-color: #0A67D1;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.09);
}

.emotion-6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1.5rem;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  color: #53595E;
  font-size: 0.875rem;
  padding: calc(0.25rem - 1px) calc(0.5rem - 1px);
  margin-left: 0.25rem;
}

.emotion-6 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition: color .2s;
  transition: color .2s;
}

.emotion-6 > span > :not(:last-child) {
  margin-right: 0.5rem;
}

.emotion-6:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-6:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0A67D1;
}

.emotion-6:not(:disabled):hover {
  background-color: rgba(103,108,112,0.16);
}

.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1.5rem;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  color: #53595E;
  font-size: 0.875rem;
  padding: calc(0.25rem - 1px) calc(0.5rem - 1px);
  cursor: not-allowed;
  opacity: 0.5;
  pointer-events: none;
}

.emotion-2 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition: color .2s;
  transition: color .2s;
}

.emotion-2 > span > :not(:last-child) {
  margin-right: 0.5rem;
}

.emotion-2:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-2:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0A67D1;
}

.emotion-2:not(:disabled):hover {
  background-color: rgba(103,108,112,0.16);
}

<div
  class="emotion-7"
>
  <button
    class="emotion-2"
    disabled=""
    title="Página anterior"
    type="button"
  >
    <span>
      <span
        class="emotion-1"
      >
        <svg
          aria-hidden="true"
          class="emotion-0"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M14.47 5.64l1.42 1.41L10.94 12l4.95 4.95-1.42 1.41L8.11 12l6.36-6.36z"
            data-name="angle-left"
          />
        </svg>
      </span>
    </span>
  </button>
  <input
    class="emotion-3"
    type="text"
    value="1"
  />
  <span>
    de 10
  </span>
  <button
    class="emotion-6"
    title="Próxima página"
    type="button"
  >
    <span>
      <span
        class="emotion-1"
      >
        <svg
          aria-hidden="true"
          class="emotion-0"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M9.53 18.36l-1.42-1.41L13.06 12 8.11 7.05l1.42-1.41L15.89 12l-6.36 6.36z"
            data-name="angle-right"
          />
        </svg>
      </span>
    </span>
  </button>
</div>
`;

exports[`deve renderizar corretamente 3`] = `
.emotion-7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0;
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-0 {
  fill: currentColor;
  font-size: 1.5rem;
}

.emotion-3 {
  background-color: #FFFFFF;
  border: solid 1px #B9B9BD;
  border-radius: 2px;
  color: #2D343B;
  line-height: 1rem;
  padding: calc(0.5rem - 1px) 0.5rem;
  width: 100%;
  -webkit-transition: all .2s;
  transition: all .2s;
  width: 47px;
  text-align: center;
  margin: 0 0.5rem 0 0.25rem;
}

.emotion-3::-webkit-input-placeholder {
  color: #B9B9BD;
}

.emotion-3::-moz-placeholder {
  color: #B9B9BD;
}

.emotion-3:-ms-input-placeholder {
  color: #B9B9BD;
}

.emotion-3::placeholder {
  color: #B9B9BD;
}

.emotion-3:disabled {
  border-color: #DCDCE0;
  background-color: #F2F2F7;
}

.emotion-3:not(:disabled):hover {
  border-color: #818489;
}

.emotion-3:not(:disabled):focus {
  outline: none;
  box-shadow: 0 0 0 2px #F2F2F7,0 0 0 4px #0A67D1;
}

.emotion-3:not(:disabled):active {
  border-color: #0A67D1;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.09);
}

.emotion-6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1.5rem;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  color: #53595E;
  font-size: 0.875rem;
  padding: calc(0.25rem - 1px) calc(0.5rem - 1px);
  margin-left: 0.25rem;
}

.emotion-6 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition: color .2s;
  transition: color .2s;
}

.emotion-6 > span > :not(:last-child) {
  margin-right: 0.5rem;
}

.emotion-6:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-6:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0A67D1;
}

.emotion-6:not(:disabled):hover {
  background-color: rgba(103,108,112,0.16);
}

.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1.5rem;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  color: #53595E;
  font-size: 0.875rem;
  padding: calc(0.25rem - 1px) calc(0.5rem - 1px);
  cursor: not-allowed;
  opacity: 0.5;
  pointer-events: none;
}

.emotion-2 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition: color .2s;
  transition: color .2s;
}

.emotion-2 > span > :not(:last-child) {
  margin-right: 0.5rem;
}

.emotion-2:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-2:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0A67D1;
}

.emotion-2:not(:disabled):hover {
  background-color: rgba(103,108,112,0.16);
}

<div
  class="emotion-7"
>
  <button
    class="emotion-2"
    disabled=""
    title="Página anterior"
    type="button"
  >
    <span>
      <span
        class="emotion-1"
      >
        <svg
          aria-hidden="true"
          class="emotion-0"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M14.47 5.64l1.42 1.41L10.94 12l4.95 4.95-1.42 1.41L8.11 12l6.36-6.36z"
            data-name="angle-left"
          />
        </svg>
      </span>
    </span>
  </button>
  <input
    class="emotion-3"
    type="text"
    value="1"
  />
  <span>
    de 9
  </span>
  <button
    class="emotion-6"
    title="Próxima página"
    type="button"
  >
    <span>
      <span
        class="emotion-1"
      >
        <svg
          aria-hidden="true"
          class="emotion-0"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M9.53 18.36l-1.42-1.41L13.06 12 8.11 7.05l1.42-1.41L15.89 12l-6.36 6.36z"
            data-name="angle-right"
          />
        </svg>
      </span>
    </span>
  </button>
</div>
`;
